<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/edtText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_hint_add_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtText">

        <RadioButton
          android:id="@+id/rBtnLow"
          android:textStyle="bold"
          android:checked="true"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:background="@android:color/holo_green_light"
          android:text="@string/txt_priority_low"
          android:textColor="@color/white"
          android:textSize="16sp" />
        <RadioButton
            android:id="@+id/rBtnMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:padding="10dp"
            android:text="@string/txt_priority_medium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rBtnHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:padding="10dp"
            android:text="@string/txt_priority_high"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_add_note_btn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" />
</androidx.constraintlayout.widget.ConstraintLayout>